--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <artifactId>logback-core</artifactId>
             <version>1.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
